# ai-tool-log

./: CMakeLists.txt  adbmanager.cpp  adbmanager.h  brieflogconverter.cpp  configfilter.h  filemanager.cpp  iconfigfilter.h  ilogconverter.h  ilogfilter.h  logfilter.cpp  logfilter.h  logmodel.cpp  logmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  marklogmodel.cpp  propertiesmodel.h  propertydefinition.h  propertydefinitionmodel.cpp  settingsmodel.h  threadtimelogconverter.cpp
src/converters/: brieflogconverter.cpp  brieflogconverter.h  threadtimelogconverter.h
src/data/: logentry.h  propertydefinition.h  propertyentry.h  settingentry.h
src/delegates/: highlightdelegate.cpp  highlightdelegate.h
src/filters/: configfilter.cpp
src/interfaces/: ilogconverter.h  ilogfilter.h
src/managers/: adbcommand.h  adbmanager.cpp  filemanager.h
src/models/: logmodel.cpp  marklogmodel.cpp  marklogmodel.h  propertiesmodel.cpp  propertiesmodel.h  propertydefinitionmodel.cpp  propertydefinitionmodel.h  settingsmodel.cpp  settingsmodel.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  valuedelegate.cpp  valuedelegate.h
